Começo da estrutura HTML

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,40 @@
 </head>
 <body>
   <header>
-    <h1>Correio Ta On</h1>
+    <h1>Você e mais 10 pessoas acabaram de ganhar um <span>cupom de 20% de desconto</span></h1>
   </header>
+
+  <section class="first">
+    <div class="container">
+      <img src="Logo black friday" alt="">
+      <h1>descubra como eliminar até 10kg em 30 dias</h1>
+      <h1>se divertindo em casa</h1>
+      <p>Acelere o seu Metabolismo as <span>Fases de Aceleração Metabólica</span></p>
+  
+      <iframe src="" frameborder="0"></iframe>
+  
+      <button>Quero aproveitar meu <br> cupom de 20% de desconto</button>
+      <p>Receba imediatamente o seu acesso após a confirmação do pagamento</p>
+      
+      <div class="icones">
+        <img src="Acesso anual" alt="">
+        <img src="Renovação anual" alt="">
+        <img src="Compra segura" alt="">
+        <img src="Garantia 7 dias" alt="">
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <div class="container">
+      <h1>Basta seguir as aulas para <br> <strong>alcançar resultados como estes</strong></h1>
+
+      <div class="carrosel">
+        <img src="" alt="">
+      </div>
+      <p>Os depoimentos acima são de experiências pessoas de cada usuário e não é garantido que você poderá obter os mesmos resultados. Como qualquer outro programa de exercícios, você assume certos riscos para a saúde e segurança utilizando o RITBOX EM CASA.</p>
+
+    </div>
+  </section>
 </body>
 </html>
