--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,19 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/dist/assets/styles/home.css">
   <title>Black Friday</title>
 </head>
 <body>
   <header>
-    <h1>Você e mais 10 pessoas acabaram de ganhar um <span>cupom de 20% de desconto</span></h1>
+    <div class="container">
+      <h1><strong>Você e mais 10 pessoas acabaram de ganhar um <span>cupom de 20% de desconto</span></strong></h1>
+    </div>
   </header>
 
   <section class="first">
     <div class="container">
-      <img src="Logo black friday" alt="">
+      <img src="/dist/assets/images/LOGO.png" alt="Logo black friday">
       <h1>descubra como eliminar até 10kg em 30 dias</h1>
       <h1>se divertindo em casa</h1>
       <p>Acelere o seu Metabolismo as <span>Fases de Aceleração Metabólica</span></p>
@@ -24,10 +27,22 @@
       <p>Receba imediatamente o seu acesso após a confirmação do pagamento</p>
       
       <div class="icones">
-        <img src="Acesso anual" alt="">
-        <img src="Renovação anual" alt="">
-        <img src="Compra segura" alt="">
-        <img src="Garantia 7 dias" alt="">
+        <div class="box">
+          <img src="/dist/assets/images/1.png" alt="">
+          <span>Acesso anual <br>100% on-line</span>
+        </div>
+        <div class="box">
+          <img src="/dist/assets/images/6.png" alt="">
+          <span>Renovação anual<br>automática</span>
+        </div>  
+        <div class="box">
+          <img src="/dist/assets/images/10.png" alt="">
+          <span>Compra 100%<br>segura</span>
+        </div>   
+        <div class="box">
+          <img src="/dist/assets/images/14.png" alt="">
+          <span>Garantia<br>7 dias</span>
+        </div>   
       </div>
     </div>
   </section>
