--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <div class="container">
       <img src="/dist/assets/images/LOGO.png" alt="Logo black friday">
       <h1>descubra como eliminar até 10kg em 30 dias</h1>
-      <h1>se divertindo em casa</h1>
+      <h1 class="h1-fundo">se divertindo em casa</h1>
       <p>Acelere o seu Metabolismo as <span>Fases de Aceleração Metabólica</span></p>
   
       <iframe src="" frameborder="0"></iframe>
@@ -29,19 +29,19 @@
       <div class="icones">
         <div class="box">
           <img src="/dist/assets/images/1.png" alt="">
-          <span>Acesso anual <br>100% on-line</span>
+          <p>Acesso anual <br>100% on-line</p>
         </div>
         <div class="box">
           <img src="/dist/assets/images/6.png" alt="">
-          <span>Renovação anual<br>automática</span>
+          <p>Renovação anual<br>automática</p>
         </div>  
         <div class="box">
           <img src="/dist/assets/images/10.png" alt="">
-          <span>Compra 100%<br>segura</span>
+          <p>Compra 100%<br>segura</p>
         </div>   
         <div class="box">
           <img src="/dist/assets/images/14.png" alt="">
-          <span>Garantia<br>7 dias</span>
+          <p>Garantia<br>7 dias</p>
         </div>   
       </div>
     </div>
