--- a/src/Sections.html
+++ b/src/Sections.html
@@ -11,30 +11,49 @@
 </head>
 
 <body>
-<section class="descont1">
-  <div class="container">
-    <div class="botao">
-      <h3>Acesso anual por apenas 12x R$ 15,35</h3>
-      <a href="#" target="_blank">
-          QUERO APROVEITAR MEU CUPOM DE 20% DE DESCONTO       
-      </a>
-      <h3>Receba imediatamente o seu acesso após a confirmação do pagamento.</h3>
+  <section class="descont1">
+    <div class="container">
+      <div class="botao">
+        <h3>Acesso anual por apenas 12x R$ 15,35</h3>
+        <a href="#" target="_blank">
+            QUERO APROVEITAR MEU CUPOM DE 20% DE DESCONTO       
+        </a>
+        <h3>Receba imediatamente o seu acesso após a confirmação do pagamento.</h3>
+      </div>
+      <div class="icones">
+          <div class="box">
+            <img src="/dist/assets/images/45.png" alt="">
+          </div>
+          <div class="box">
+            <img src="/dist/assets/images/49.png" alt="">
+          </div>  
+          <div class="box">
+            <img src="/dist/assets/images/51.png" alt="">
+          </div>   
+          <div class="box">
+            <img src="/dist/assets/images/47.png" alt="">
+          </div>   
+      </div>
     </div>
-    <div class="icones">
-        <div class="box">
-          <img src="/dist/assets/images/45.png" alt="">
-        </div>
-        <div class="box">
-          <img src="/dist/assets/images/49.png" alt="">
-        </div>  
-        <div class="box">
-          <img src="/dist/assets/images/51.png" alt="">
-        </div>   
-        <div class="box">
-          <img src="/dist/assets/images/47.png" alt="">
-        </div>   
+  </section>
+  <section class="fourthSection">
+    <div class="container">
+      <div class="centro">
+        <hr class="linhaAzul"></hr>
+          <div class="words">
+            <h3>ENTENDA O <strong> FUNCIONAMENTO </strong> DO SEU CORPO COM
+              <strong> TREINOS TRADICIONAIS </strong> X <strong> TREINOS COM FASE DE ACELERAÇÃO METABÓLICA </strong> </h3>
+            </div>
+            <hr class="linhaAzul"></hr>
+          <div class="words2">
+            <p>ANALISE O GRAFICO E COMPARE COMO ESSE CICLO O QUE</p>
+            <p>ACONTECE COM UM PESSOA QUE PRATICA E NÃO PRATICA RITBOX.</p>
+          </div>
+      </div>
     </div>
-  </div>
-</section>
+    <div class="imagem">
+      <img src="/dist/assets/images/28.png" alt="">
+    </div>
+  </section>
 </body>
 </html>
