--- a/src/Sections.html
+++ b/src/Sections.html
@@ -55,5 +55,54 @@
       <img src="/dist/assets/images/28.png" alt="">
     </div>
   </section>
+  <section class="fifthSection">
+    <div class="container">
+      <div class="centro">
+        <div class="words">
+          <div class="title">
+            <h3>RESULTADO EM <span>2 MESES</span> SE DIVERTINDO EM CASA</h3>
+          </div>
+          <h4>É ISSO QUE EU PRECISO PARA DEVOLVER O SORRISO NO SEU ROSTO</h4>
+          <p>Veja como funciona a sua jornada de transformação:</p>
+        </div>
+        <div class="images">
+          <div class="box">
+            <img src="/dist/assets/images/30.png" alt="">
+          </div>   
+          <div class="box">
+            <img src="/dist/assets/images/31.png" alt="">
+          </div>   
+          <div class="box">
+            <img src="/dist/assets/images/32.png" alt="">
+          </div>   
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="descont1">
+    <div class="container">
+      <div class="botao">
+        <h3>Acesso anual por apenas 12x R$ 15,35</h3>
+        <a href="#" target="_blank">
+            QUERO APROVEITAR MEU CUPOM DE 20% DE DESCONTO       
+        </a>
+        <h3>Receba imediatamente o seu acesso após a confirmação do pagamento.</h3>
+      </div>
+      <div class="icones">
+          <div class="box">
+            <img src="/dist/assets/images/45.png" alt="">
+          </div>
+          <div class="box">
+            <img src="/dist/assets/images/49.png" alt="">
+          </div>  
+          <div class="box">
+            <img src="/dist/assets/images/51.png" alt="">
+          </div>   
+          <div class="box">
+            <img src="/dist/assets/images/47.png" alt="">
+          </div>   
+      </div>
+    </div>
+  </section>
 </body>
 </html>
