Alterações no terceiro módulo

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  
   <link rel="stylesheet" href="/dist/assets/styles/home.css">
+  <link href="https://fonts.googleapis.com/css2?family=Encode+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <title>Black Friday</title>
 </head>
 <body>
@@ -47,16 +51,41 @@
     </div>
   </section>
 
-  <section>
+  <section class="second">
     <div class="container">
       <h1>Basta seguir as aulas para <br> <strong>alcançar resultados como estes</strong></h1>
 
       <div class="carrosel">
-        <img src="" alt="">
+        <img src="/dist/assets/images/2.png" alt="">
+        <img src="/dist/assets/images/7.png" alt="">
+        <img src="/dist/assets/images/11.png" alt="">
       </div>
       <p>Os depoimentos acima são de experiências pessoas de cada usuário e não é garantido que você poderá obter os mesmos resultados. Como qualquer outro programa de exercícios, você assume certos riscos para a saúde e segurança utilizando o RITBOX EM CASA.</p>
 
     </div>
+  </section>
+
+  <section class="third">
+    <svg>
+      <use xlink:href="dist/assets/svg/sprite.svg#patter1"></use>
+    </svg>
+    <div class="container">
+      <img src="/dist/assets/images/23.png" alt="">
+      <div class="content">
+        <div class="left">
+          <h1>1 ano de <span>resultado em 2 meses</span><br>se divertindo em casa</h1>
+          <img src="/dist/assets/images/24.png" alt="">
+          <p><span>RIT</span> é o Ritmo necessário que um treino precisa ter para você acelera a sua queima de gordura, usando a música + treino para deixar o seu processo de emagrecimento mais divertido</p>
+          <p><span>BOX</span> é a caixa que possui todos os métodos que acelera o seu metabolismo, um desses métodos é o HIIT que acelera a sua queima de gordura por até 48H após o treino.</p>
+          <p>Treinando ritbox você coloca o seu corpo no MODO EMAGRECIMENTO porque aumenta a produção de mitocôndrias que é a organela responsável pela queima de gordura e pela produção de energia acelerada.</p>
+        </div>
+        <div class="right">
+          <img src="/dist/assets/images/26.png" alt="">
+        </div>
+      </div>
+      <img src="/dist/assets/images/27.png" alt="RITBOX acelera seu metabolismo">
+    </div>
+
   </section>
 </body>
 </html>
