--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,9 @@
       <h1 class="h1-fundo">se divertindo em casa</h1>
       <p>Acelere o seu Metabolismo as <span>Fases de Aceleração Metabólica</span></p>
   
-      <iframe src="" frameborder="0"></iframe>
+      <div class="video">
+        <div id="vid_63274df5369e77000acb159c" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_63274df5369e77000acb159c" src="https://images.converteai.net/33cfebf4-8e3e-42f5-952a-0961bd5a0ef7/players/63274df5369e77000acb159c/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_63274df5369e77000acb159c" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_63274df5369e77000acb159c">var s=document.createElement("script");s.src="https://scripts.converteai.net/33cfebf4-8e3e-42f5-952a-0961bd5a0ef7/players/63274df5369e77000acb159c/player.js",s.async=!0,document.head.appendChild(s);</script>
+      </div>
   
       <button>Quero aproveitar meu <br> cupom de 20% de desconto</button>
       <p>Receba imediatamente o seu acesso após a confirmação do pagamento</p>
@@ -70,7 +72,7 @@
       <use xlink:href="dist/assets/svg/sprite.svg#patter1"></use>
     </svg>
     <div class="container">
-      <img src="/dist/assets/images/23.png" alt="">
+      <img src="/dist/assets/images/23.png" alt="" class="metodologia">
       <div class="content">
         <div class="left">
           <h1>1 ano de <span>resultado em 2 meses</span><br>se divertindo em casa</h1>
@@ -83,9 +85,206 @@
           <img src="/dist/assets/images/26.png" alt="">
         </div>
       </div>
-      <img src="/dist/assets/images/27.png" alt="RITBOX acelera seu metabolismo">
+      <img src="/dist/assets/images/27.png" alt="RITBOX acelera seu metabolismo" class="rit">
     </div>
 
   </section>
+
+  <section class="descont1">
+    <div class="container">
+      <div class="botao">
+        <h3>Acesso anual por apenas 12x R$ 15,35</h3>
+        <a href="#" target="_blank">
+            QUERO APROVEITAR MEU CUPOM DE 20% DE DESCONTO       
+        </a>
+        <h3>Receba imediatamente o seu acesso após a confirmação do pagamento.</h3>
+      </div>
+      <div class="icones">
+          <div class="box">
+            <img src="/dist/assets/images/45.png" alt="">
+          </div>
+          <div class="box">
+            <img src="/dist/assets/images/49.png" alt="">
+          </div>  
+          <div class="box">
+            <img src="/dist/assets/images/51.png" alt="">
+          </div>   
+          <div class="box">
+            <img src="/dist/assets/images/47.png" alt="">
+          </div>   
+      </div>
+    </div>
+  </section>
+  <section class="fourthSection">
+    <div class="container">
+      <div class="centro">
+        <hr class="linhaAzul"></hr>
+          <div class="words">
+            <h3>ENTENDA O <strong> FUNCIONAMENTO </strong> DO SEU CORPO COM
+              <strong> TREINOS TRADICIONAIS </strong> X <strong> TREINOS COM FASE DE ACELERAÇÃO METABÓLICA </strong> </h3>
+            </div>
+            <hr class="linhaAzul"></hr>
+          <div class="words2">
+            <p>ANALISE O GRAFICO E COMPARE COMO ESSE CICLO O QUE</p>
+            <p>ACONTECE COM UM PESSOA QUE PRATICA E NÃO PRATICA RITBOX.</p>
+          </div>
+      </div>
+    </div>
+    <div class="imagem">
+      <img src="/dist/assets/images/28.png" alt="">
+    </div>
+  </section>
+  <section class="fifthSection">
+    <div class="container">
+      <div class="centro">
+        <div class="words">
+          <div class="title">
+            <h3>RESULTADO EM <span>2 MESES</span> SE DIVERTINDO EM CASA</h3>
+          </div>
+          <h4>É ISSO QUE EU PRECISO PARA DEVOLVER O SORRISO NO SEU ROSTO</h4>
+          <p>Veja como funciona a sua jornada de transformação:</p>
+        </div>
+        <div class="images">
+          <div class="box">
+            <img src="/dist/assets/images/30.png" alt="">
+          </div>   
+          <div class="box">
+            <img src="/dist/assets/images/31.png" alt="">
+          </div>   
+          <div class="box">
+            <img src="/dist/assets/images/32.png" alt="">
+          </div>   
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="descont1">
+    <div class="container">
+      <div class="botao">
+        <h3>Acesso anual por apenas 12x R$ 15,35</h3>
+        <a href="#" target="_blank">
+            QUERO APROVEITAR MEU CUPOM DE 20% DE DESCONTO       
+        </a>
+        <h3>Receba imediatamente o seu acesso após a confirmação do pagamento.</h3>
+      </div>
+      <div class="icones">
+          <div class="box">
+            <img src="/dist/assets/images/45.png" alt="">
+          </div>
+          <div class="box">
+            <img src="/dist/assets/images/49.png" alt="">
+          </div>  
+          <div class="box">
+            <img src="/dist/assets/images/51.png" alt="">
+          </div>   
+          <div class="box">
+            <img src="/dist/assets/images/47.png" alt="">
+          </div>   
+      </div>
+    </div>
+  </section>
+  <!-- tem mais duas aq -->
+  <section class="evani">
+    <div class="logo">
+      <svg>
+        <use xlink:href="dist/assets/svg/sprite.svg#patter1"></use>
+      </svg>
+      <span>EVANI PEREIRA</span>
+    </div>
+    <div class="container">
+      <img src="/dist/assets/images/54.png" alt="" class="metodologia">
+      <div class="content">
+        <div class="left">
+          <p><span>Master COACH RitBox</span> é uma das maiores autoridade em emagrecimento no Brasil.<span>Evani Pereira</span> já ajudou mais <span>50.000 pessoas</span> a emagrecerem através do RITBOX.</p>
+          <p>A profissional de <span>Educação Física</span> Evani vai ajudar você a alcançar todos os resultados que você deseja, através da metodologia ritbox e das Fases de <span>aceleração metabólica</span>.</p>
+        </div>
+        <div class="right">
+          <img src="/dist/assets/images/43.png" alt="">
+        </div>
+      </div>
+    </div>
+    <div class="logo">
+      <svg class="inves">
+        <use xlink:href="dist/assets/svg/sprite.svg#patter1"></use>
+      </svg>
+    </div>
+  </section>
+
+  <section class="descont1">
+    <div class="container">
+      <div class="botao">
+        <h3>Acesso anual por apenas 12x R$ 15,35</h3>
+        <a href="#" target="_blank">
+            QUERO APROVEITAR MEU CUPOM DE 20% DE DESCONTO       
+        </a>
+        <h3>Receba imediatamente o seu acesso após a confirmação do pagamento.</h3>
+      </div>
+      <div class="icones">
+          <div class="box">
+            <img src="/dist/assets/images/45.png" alt="">
+          </div>
+          <div class="box">
+            <img src="/dist/assets/images/49.png" alt="">
+          </div>  
+          <div class="box">
+            <img src="/dist/assets/images/51.png" alt="">
+          </div>   
+          <div class="box">
+            <img src="/dist/assets/images/47.png" alt="">
+          </div>   
+      </div>
+    </div>
+  </section>
+
+  <section class="faq">
+    <div class="logo">
+      <svg class="expet">
+        <use xlink:href="dist/assets/svg/sprite.svg#patter1"></use>
+      </svg>
+    </div>
+    <div class="container">
+      <h2>PERGUNTAS FREQUENTES</h2>
+      <h1>FAQ</h1>
+  
+      <div class="questions">
+        <div class="question" onclick="changeStuff();">
+          <p>O que é ritbox?</h2>
+          <div class="textSection">
+            <p>Lorem Ipsum dolor idkLorem Ipsum dolor idkLorem Ipsum dolor idkLorem Ipsum dolor idkLorem Ipsum dolor idkLorem Ipsum dolor idkLorem Ipsum dolor idkLorem Ipsum dolor idkLorem Ipsum dolor idkLorem Ipsum dolor idkLorem Ipsum dolor idk</p>
+          </div>
+        </div>
+        <div class="question"><p>O que é ritbox?</p></div>
+        <div class="question"><p>O que é ritbox?</p></div>
+        <div class="question"><p>O que é ritbox?</p></div>
+        <div class="question"><p>O que é ritbox?</p></div>
+        <div class="question"><p>O que é ritbox?</p></div>
+        <div class="question"><p>O que é ritbox?</p></div>
+        <div class="question"><p>O que é ritbox?</p></div>
+        <div class="question"><p>O que é ritbox?</p></div>
+        <div class="question"><p>O que é ritbox?</p></div>
+        <div class="question"><p>O que é ritbox?</p></div>
+        <div class="question"><p>O que é ritbox?</p></div>
+        <div class="question"><p>O que é ritbox?</p></div>
+        <div class="question"><p>O que é ritbox?</p></div>
+        <div class="question"><p>O que é ritbox?</p></div>
+        <div class="question"><p>O que é ritbox?</p></div>
+      </div>
+    </div>
+    <div class="logo">
+      <svg class="inves">
+        <use xlink:href="dist/assets/svg/sprite.svg#patter1"></use>
+      </svg>
+    </div>
+  </section>
+
+  <script>
+    function changeStuff(event) {
+      if(getComputedStyle(document.getElementsByClassName("textSection")[0], null).display == "none") {
+        document.getElementsByClassName("textSection")[0].style.display = "block"
+      } else {
+        document.getElementsByClassName("textSection")[0].style.display = "none";
+      }
+    }
+  </script>
 </body>
 </html>
