--- a/src/index.html
+++ b/src/index.html
@@ -235,6 +235,116 @@
       </div>
     </div>
   </section>
+  <section class="sixthSection">
+    <div class="container">
+      <div class="centro">
+        <div class="words">
+          <div class="title">
+            <h2>ADEUS EFEITO </h2>
+            <h2>SANFONA </h2>
+          </div>
+          <div class="paragrafo">
+            <p>Você tomando uma atitude <span>HOJE</span> terá acesso <span>GRATUITO</span> a todos esses</p>
+            <p>programas abaixo através da nossa <span>PLATAFORMA DE TREINO</span>.</p>
+          </div>
+        </div>
+        <div class="images">
+          <div class="box">
+            <img src="/dist/assets/images/41.png" alt="">
+          </div>
+          <div class="box">
+            <img src="/dist/assets/images/40.png" alt="">
+          </div>
+          <div class="box">
+            <img src="/dist/assets/images/36.png" alt="">
+          </div>
+          <div class="box">
+            <img src="/dist/assets/images/39.png" alt="">
+          </div>
+          <div class="box">
+            <img src="/dist/assets/images/33.png" alt="">
+          </div>
+          <div class="box">
+            <img src="/dist/assets/images/35.png" alt="">
+          </div>
+          <div class="box">
+            <img src="/dist/assets/images/37.png" alt="">
+          </div>
+          <div class="box">
+            <img src="/dist/assets/images/34.png" alt="">
+          </div>
+          <div class="box">
+            <img src="/dist/assets/images/38.png" alt="">
+          </div>
+        </div>
+        <div class="words2">
+          <div class="title">
+            <h2>E MUITO MAIS…</h2>
+          </div>
+          <p>Muito mais importante que emagrecer é conseguir manter o peso perdido ao longo do tempo. Você só conseguirá
+          </p>
+          <p>isso se tiver opções para não cair na monotonia e no tédio.</p>
+        </div>
+        <div class="image2">
+          <div class="box">
+            <img src="/dist/assets/images/42.png" alt="">
+          </div>
+        </div>
+        <div class="words3">
+          <p>O <span>RITBOX EM CASA </span> está entre os maiores programas de treinamento do Brasil e possui alunos em mais <span>20 países.</span></p>
+          <p>Finalizando a sua inscrição hoje, com incentivo e reconhecimento do seu comprometimento, você obterá acesso a mais de <span>9 programas de treinamento</span>, pois lembre-se, muito mais importante que emagrecer é conseguir manter o peso perdido ao longo do tempo, e você só conseguirá isso se tiver opções para não cair na monotonia e no tédio.</p>
+          <p>Tem programa para perder barriga, para reeducar a alimentação, programa pra prevenir lesão, curso pra mudar seu mindset e <span> muito mais</span> .</p>
+          <p>E ainda, você ganha direito a todas as atualizações que a plataforma vai receber ao longo do ano, com novos programas <span>SEM CUSTO NENHUM</span>.</p>
+          <p>Dessa maneira, a sua academia será a sua <span>própria casa</span>.</p>
+        </div>
+        <div class="image3">
+          <div class="box">
+            <img src="/dist/assets/images/3listras.png" alt="">
+          </div>
+        </div>
+        <div class="words4">
+          <h2>VOCÊ PODE INVESTIR NO</h2>
+          <h2><span>RITBOX EM CASA</span></h2>
+          <h2>SEM NENHUM RISCO</h2>
+        </div>
+        <div class="linhaAmarela"></div>
+        <div class="words5">
+          <p>Ao assinar o serviço, você terá <span>7 dias</span> para treinar e consumir todo o conteúdo que quiser durante esse período. Se, dentro deste prazo, por algum motivo, qualquer que seja, você não gostar ou achar que não faz sentido para sua vida…</p>
+          <p>Basta nos enviar um e-mail e você <span>vai receber TODO o seu investimento de volta</span>, sem complicação ou letras miúdas, simples assim!</p>
+        </div>
+        <div class="image4">
+          <div class="box">
+            <img src="/dist/assets/images/52.png" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="descont1">
+    <div class="container">
+      <div class="botao">
+        <h3>Acesso anual por apenas 12x R$ 15,35</h3>
+        <a href="#" target="_blank">
+          QUERO APROVEITAR MEU CUPOM DE 20% DE DESCONTO
+        </a>
+        <h3>Receba imediatamente o seu acesso após a confirmação do pagamento.</h3>
+      </div>
+      <div class="icones">
+        <div class="box">
+          <img src="/dist/assets/images/45.png" alt="">
+        </div>
+        <div class="box">
+          <img src="/dist/assets/images/49.png" alt="">
+        </div>
+        <div class="box">
+          <img src="/dist/assets/images/51.png" alt="">
+        </div>
+        <div class="box">
+          <img src="/dist/assets/images/47.png" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
 
   <section class="faq">
     <div class="logo">
