--- a/src/Sections.html
+++ b/src/Sections.html
@@ -222,6 +222,72 @@
       </div>
     </div>
   </section>
+  <section class="seventSection">
+    <div class="container">
+      <h1>Basta seguir as aulas para <br> <strong>alcançar resultados como estes</strong></h1>
+
+      <div class="carrosel">
+        <img src="/dist/assets/images/2.png" alt="">
+        <img src="/dist/assets/images/7.png" alt="">
+        <img src="/dist/assets/images/11.png" alt="">
+      </div>
+      <p>Os depoimentos acima são de experiências pessoas de cada usuário e não é garantido que você poderá obter os mesmos resultados.</p>
+      <p>Como qualquer outro programa de exercícios, você assume certos riscos para a saúde e segurança utilizando o RITBOX EM CASA.</p>
+
+    </div>
+  </section>
+  <section class="descont1">
+    <div class="container">
+      <div class="botao">
+        <h3>Acesso anual por apenas 12x R$ 15,35</h3>
+        <a href="#" target="_blank">
+          QUERO APROVEITAR MEU CUPOM DE 20% DE DESCONTO
+        </a>
+        <h3>Receba imediatamente o seu acesso após a confirmação do pagamento.</h3>
+      </div>
+      <div class="icones">
+        <div class="box">
+          <img src="/dist/assets/images/45.png" alt="">
+        </div>
+        <div class="box">
+          <img src="/dist/assets/images/49.png" alt="">
+        </div>
+        <div class="box">
+          <img src="/dist/assets/images/51.png" alt="">
+        </div>
+        <div class="box">
+          <img src="/dist/assets/images/47.png" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
+  <footer>
+    <div class="container">
+      <div class="centro">
+        <div class="image">
+          <div class="box">
+            <img src="/dist/assets/images/3.png" alt="">
+          </div>
+        </div>
+        <div class="words">
+          <div class="first1">
+            <p>Como qualquer exercício físico, você assume alguns riscos para sua saúde e segurança ao praticar o Ritbox em Casa. Consulte seu médico e siga todas as suas instruções de segurança antes de iniciar esse programa de alta intensidade que gera bastante demanda física e nutricional. Os resultados dependem do ponto inicial de cada um, dos seus objetivos e da sua dedicação. Colocar em prática as recomendações do programa é essencial para alcançar os resultados. Mas é a dedicação, motivação e demais individualidades que irão determinar os resultados finais.</p>
+            <h4>NÃO É RECOMENDADO PARA HIPERTENSOS, DIABÉTICOS E GRAVIDAS</h4>
+          </div>
+          <div class="email">
+            <h2>contato@ritbox.com.br</h2>
+          </div>
+          <div class="endereco">
+            <p>Endereço: Condominio São Francisco 2 – Conjunto F Casa 1 Arapoanga | Wesley Hayka Rodrigues de Souza CNPJ: 33.496.425/0001-92</p>
+          </div>
+          <div class="termos">
+            <span>Política de Privacidade</span>
+            <span>Termos de Uso</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
