--- a/src/index.html
+++ b/src/index.html
@@ -182,60 +182,7 @@
           </div>   
       </div>
     </div>
-  </section>
-  <!-- tem mais duas aq -->
-  <section class="evani">
-    <div class="logo">
-      <svg>
-        <use xlink:href="dist/assets/svg/sprite.svg#patter1"></use>
-      </svg>
-      <span>EVANI PEREIRA</span>
-    </div>
-    <div class="container">
-      <img src="/dist/assets/images/54.png" alt="" class="metodologia">
-      <div class="content">
-        <div class="left">
-          <p><span>Master COACH RitBox</span> é uma das maiores autoridade em emagrecimento no Brasil.<span>Evani Pereira</span> já ajudou mais <span>50.000 pessoas</span> a emagrecerem através do RITBOX.</p>
-          <p>A profissional de <span>Educação Física</span> Evani vai ajudar você a alcançar todos os resultados que você deseja, através da metodologia ritbox e das Fases de <span>aceleração metabólica</span>.</p>
-        </div>
-        <div class="right">
-          <img src="/dist/assets/images/43.png" alt="">
-        </div>
-      </div>
-    </div>
-    <div class="logo">
-      <svg class="inves">
-        <use xlink:href="dist/assets/svg/sprite.svg#patter1"></use>
-      </svg>
-    </div>
-  </section>
-
-  <section class="descont1">
-    <div class="container">
-      <div class="botao">
-        <h3>Acesso anual por apenas 12x R$ 15,35</h3>
-        <a href="#" target="_blank">
-            QUERO APROVEITAR MEU CUPOM DE 20% DE DESCONTO       
-        </a>
-        <h3>Receba imediatamente o seu acesso após a confirmação do pagamento.</h3>
-      </div>
-      <div class="icones">
-          <div class="box">
-            <img src="/dist/assets/images/45.png" alt="">
-          </div>
-          <div class="box">
-            <img src="/dist/assets/images/49.png" alt="">
-          </div>  
-          <div class="box">
-            <img src="/dist/assets/images/51.png" alt="">
-          </div>   
-          <div class="box">
-            <img src="/dist/assets/images/47.png" alt="">
-          </div>   
-      </div>
-    </div>
-  </section>
-  <section class="sixthSection">
+  </section>  <section class="sixthSection">
     <div class="container">
       <div class="centro">
         <div class="words">
@@ -325,27 +272,77 @@
       <div class="botao">
         <h3>Acesso anual por apenas 12x R$ 15,35</h3>
         <a href="#" target="_blank">
-          QUERO APROVEITAR MEU CUPOM DE 20% DE DESCONTO
+            QUERO APROVEITAR MEU CUPOM DE 20% DE DESCONTO       
         </a>
         <h3>Receba imediatamente o seu acesso após a confirmação do pagamento.</h3>
       </div>
       <div class="icones">
-        <div class="box">
-          <img src="/dist/assets/images/45.png" alt="">
-        </div>
-        <div class="box">
-          <img src="/dist/assets/images/49.png" alt="">
-        </div>
-        <div class="box">
-          <img src="/dist/assets/images/51.png" alt="">
-        </div>
-        <div class="box">
-          <img src="/dist/assets/images/47.png" alt="">
-        </div>
+          <div class="box">
+            <img src="/dist/assets/images/45.png" alt="">
+          </div>
+          <div class="box">
+            <img src="/dist/assets/images/49.png" alt="">
+          </div>  
+          <div class="box">
+            <img src="/dist/assets/images/51.png" alt="">
+          </div>   
+          <div class="box">
+            <img src="/dist/assets/images/47.png" alt="">
+          </div>   
       </div>
     </div>
   </section>
+  <section class="evani">
+    <div class="logo">
+      <svg>
+        <use xlink:href="dist/assets/svg/sprite.svg#patter1"></use>
+      </svg>
+      <span>EVANI PEREIRA</span>
+    </div>
+    <div class="container">
+      <img src="/dist/assets/images/54.png" alt="" class="metodologia">
+      <div class="content">
+        <div class="left">
+          <p><span>Master COACH RitBox</span> é uma das maiores autoridade em emagrecimento no Brasil.<span>Evani Pereira</span> já ajudou mais <span>50.000 pessoas</span> a emagrecerem através do RITBOX.</p>
+          <p>A profissional de <span>Educação Física</span> Evani vai ajudar você a alcançar todos os resultados que você deseja, através da metodologia ritbox e das Fases de <span>aceleração metabólica</span>.</p>
+        </div>
+        <div class="right">
+          <img src="/dist/assets/images/43.png" alt="">
+        </div>
+      </div>
+    </div>
+    <div class="logo">
+      <svg class="inves">
+        <use xlink:href="dist/assets/svg/sprite.svg#patter1"></use>
+      </svg>
+    </div>
+  </section>
 
+  <section class="descont1">
+    <div class="container">
+      <div class="botao">
+        <h3>Acesso anual por apenas 12x R$ 15,35</h3>
+        <a href="#" target="_blank">
+            QUERO APROVEITAR MEU CUPOM DE 20% DE DESCONTO       
+        </a>
+        <h3>Receba imediatamente o seu acesso após a confirmação do pagamento.</h3>
+      </div>
+      <div class="icones">
+          <div class="box">
+            <img src="/dist/assets/images/45.png" alt="">
+          </div>
+          <div class="box">
+            <img src="/dist/assets/images/49.png" alt="">
+          </div>  
+          <div class="box">
+            <img src="/dist/assets/images/51.png" alt="">
+          </div>   
+          <div class="box">
+            <img src="/dist/assets/images/47.png" alt="">
+          </div>   
+      </div>
+    </div>
+  </section>
   <section class="faq">
     <div class="logo">
       <svg class="expet">
