Alteração no FAQ

--- a/src/index.html
+++ b/src/index.html
@@ -247,27 +247,118 @@
       <h1>FAQ</h1>
   
       <div class="questions">
-        <div class="question" onclick="changeStuff();">
-          <p>O que é ritbox?</h2>
+        <div id="0" class="question" onclick="changeStuff(0);">
+          <p>O que é ritbox?</p>
           <div class="textSection">
-            <p>Lorem Ipsum dolor idkLorem Ipsum dolor idkLorem Ipsum dolor idkLorem Ipsum dolor idkLorem Ipsum dolor idkLorem Ipsum dolor idkLorem Ipsum dolor idkLorem Ipsum dolor idkLorem Ipsum dolor idkLorem Ipsum dolor idkLorem Ipsum dolor idk</p>
+            <p>RITBOX É UM PROGRAMA DE TREINO RITMADO QUE UNE TREINO+DANÇA+MÚSICA. É UM TREINO NO QUAL É FEITO NO RITMO DA MÚSICA E TEM COMO OBJETIVO O GANHO DE MASSA, QUEIMA DE GORDURA, DEFINIÇÃO MUSCULAR, FORÇA, FORTALECIMENTO, RESISTÊNCIA E POR TER MÚSICA SE TORNA EXTREMAMENTE DIVERTIDO.</p>
           </div>
         </div>
-        <div class="question"><p>O que é ritbox?</p></div>
-        <div class="question"><p>O que é ritbox?</p></div>
-        <div class="question"><p>O que é ritbox?</p></div>
-        <div class="question"><p>O que é ritbox?</p></div>
-        <div class="question"><p>O que é ritbox?</p></div>
-        <div class="question"><p>O que é ritbox?</p></div>
-        <div class="question"><p>O que é ritbox?</p></div>
-        <div class="question"><p>O que é ritbox?</p></div>
-        <div class="question"><p>O que é ritbox?</p></div>
-        <div class="question"><p>O que é ritbox?</p></div>
-        <div class="question"><p>O que é ritbox?</p></div>
-        <div class="question"><p>O que é ritbox?</p></div>
-        <div class="question"><p>O que é ritbox?</p></div>
-        <div class="question"><p>O que é ritbox?</p></div>
-        <div class="question"><p>O que é ritbox?</p></div>
+
+        <div id="1" class="question" onclick="changeStuff(1);">
+          <p>O que terei direito nessa oferta?</p>
+          <div class="textSection">
+            <p>CALENDÁRIO DE TREINOS MENSAL</p>
+            <p>Vídeo aulas com treinos divertidos</p>
+            <p>Dicas de alimentação para potencializar seu resultado</p>
+            <p>Atualização mensal de treinos, motivando você cada vez mais</p>
+            <p>Plataforma organizada para assistir seus treinos</p>
+            <p>Vídeo aulas que podem ser vistas pelo celular, notebook, tablet ou televisão com recurso de internet.</p>
+          </div>
+        </div>
+
+        <div id="2" class="question" onclick="changeStuff(2);">
+          <p>Quais são os benefícios?</p>
+          <div class="textSection">
+            <p>A PESSOA QUE TREINA RITBOX VAI CONSEGUIR QUEIMAR GORDURA E GANHAR MASSA MAGRA, ASSIM COMO ADQUIRIR RESISTÊNCIA E FORÇA. O FATO DE SER UM TREINAMENTO DE ALTA INTENSIDADE, ACELERA O METABOLISMO E QUEIMA GORDURA EM ATÉ 48 HORAS PÓS TREINO. E OS EXERCÍCIOS REPETITIVOS E COM O PESO DO CORPO PROPORCIONA O GANHO DE MASSA, RESISTÊNCIA, DEFINIÇÃO MUSCULAR E FORÇA. TUDO ISSO DE FORMA MUITO DIVERTIDA!</p>
+          </div>
+        </div>
+
+        <div id="3" class="question" onclick="changeStuff(3);">
+          <p>Sinto dores no joelho, posso treinar?</p>
+          <div class="textSection">
+            <p>Pode! Porque o RITBOX vai te ajudar a parar sentir dores no joelho. Agachamentos é um dos melhores exercícios pra prevenir e melhorar essa condição. Tem um módulo, dentro do RITBOX que se chama “PREVENÇÃO DE LESÕES” e você deverá seguir as orientações desse módulo.</p>
+          </div>
+        </div>
+
+        <div id="4" class="question" onclick="changeStuff(4);">
+          <p>Posso treinar todos os dias?</p>
+          <div class="textSection">
+            <p>Dentro do RITBOX tem um cronograma a ser seguido, em forma de calendário. É recomendado que você siga-o corretamente, para melhores resultados. Os treinos são distribuídos de acordo com o calendário</p>
+          </div>
+        </div>
+
+        <div id="5" class="question" onclick="changeStuff(5);">
+          <p>Preciso fazer dieta?</p>
+          <div class="textSection">
+            <p>Não tem necessidade! Inclusive sou contra dieta! Essa não é a idéia! O recomendado é uma reeducação alimentar que, inclusive, disponibilizamos dentro da Plataforma RITBOX, para que a alimentação correta, seja uma rotina.</p>
+          </div>
+        </div>
+
+        <div id="6" class="question" onclick="changeStuff(6);">
+          <p>Como é feita a cobrança?</p>
+          <div class="textSection">
+            <p>A forma de pagamento que temos é por cartão de crédito, e o valor do seu plano é debitado automaticamente na assinatura anual no seu cartão de crédito.</p>
+          </div>
+        </div>
+
+        <div id="7" class="question" onclick="changeStuff(7);">
+          <p>Já faço academia, posso treinar ritbox?</p>
+          <div class="textSection">
+            <p>Pode sim. Só que não é recomendado que você treine os 2 no mesmo dia. Você precisa alternar, ou seja, um dia você treina na academia e outro dia vc treina RITBOX.</p>
+          </div>
+        </div>
+
+        <div id="8" class="question" onclick="changeStuff(8);">
+          <p>Para quem serve o ritbox em casa?</p>
+          <div class="textSection">
+            <p>Ritbox em casa é um programa de treino voltado para quem quer emagrecer e tonificar os músculos.</p>
+            <p>São vídeos de treinos gravados, disponíveis em uma plataforma, onde você acessa e treina no conforto da sua casa ou de onde você estiver.</p>
+            <p>Existem, ainda, aulas que ajudam no fortalecimento do joelho, quadril e lombar.</p>
+          </div>
+        </div>
+
+        <div id="9" class="question" onclick="changeStuff(9);">
+          <p>Quem NÃO pode treinar ritbox?</p>
+          <div class="textSection">
+            <p>Hipertensos, grávidas e diabéticos não podem fazer o RITBOX, pois é um público especial e que precisa de um acompanhamento mais próximo de um profissional. A pessoa que for treinar RITBOX nessas condições, poderá ter sérios problemas de saúde, pois é um treinamento de alta intensidade. O acompanhamento médico é imprescindível para a segurança do(a) comprador(a)</p>
+          </div>
+        </div>
+
+        <div id="10" class="question" onclick="changeStuff(10);">
+          <p>Como funciona o Ritbox em casa</p>
+          <div class="textSection">
+            <p>O RITBOX em casa é o programa de treino + ritmo + música de acordo com sua necessidade. Ao adquirir o RITBOX  EM CASA  é acesso imediato após o pagamento no cartão! O aluno receberá um email da Hotmart com o produto, acessará com login (seu email) e senha.</p>
+            <p>As vídeo aulas ficam disponíveis para assistir em qualquer dia e horário que desejar, durante o período contratado.</p>
+          </div>
+        </div>
+
+        <div id="11" class="question" onclick="changeStuff(11);">
+          <p>Como funciona o Ritbox em casa</p>
+          <div class="textSection">
+            <p>A maioria dos nossos alunos emagrecem até 12kg em 2 meses, mas depende muito de pessoa para pessoa, mas essa é a média. Depende, única e exclusivamente, da pessoa.</p>
+          </div>
+        </div>
+
+        <div id="12" class="question" onclick="changeStuff(12);">
+          <p>Consigo assistir na TV?</p>
+          <div class="textSection">
+            <p>Sim! Existem várias formas de exibir os treinos na TV. Algumas televisões conseguem espelhar os celulares, mas caso sua TV não espelhe, você pode ligar um cabo HDMI no seu computador e ligar na TV.</p>
+          </div>
+        </div>
+
+        <div id="13" class="question" onclick="changeStuff(13);">
+          <p>Posso treinar duas vezes ao dia?</p>
+          <div class="textSection">
+            <p>Não tem necessidade! Porque a pessoa queima gordura e desenvolve musculatura, quando está descansando. A mágica acontece após 48h do treinamento, pois é um treino de alta intensidade.</p>
+          </div>
+        </div>
+        
+        <div id="14" class="question" onclick="changeStuff(14);">
+          <p>Posso treinar em JEJUM?</p>
+          <div class="textSection">
+            <p>Não é recomendado! Porque o treino em jejum é indicado para atividade de leve e moderada intensidade. Você pode, até, perder massa muscular, tonturas, náuseas ou desmaiar.</p>
+          </div>
+        </div>
       </div>
     </div>
     <div class="logo">
@@ -278,12 +369,19 @@
   </section>
 
   <script>
+   
     function changeStuff(event) {
-      if(getComputedStyle(document.getElementsByClassName("textSection")[0], null).display == "none") {
-        document.getElementsByClassName("textSection")[0].style.display = "block"
+      let question = document.getElementById(`${event}`);
+      console.log(question);
+      if(getComputedStyle(document.getElementsByClassName("textSection")[event], null).display == "none") {
+        document.getElementsByClassName("textSection")[event].style.display = "block";
+        question.classList.add('rozinha');
       } else {
-        document.getElementsByClassName("textSection")[0].style.display = "none";
+        document.getElementsByClassName("textSection")[event].style.display = "none";
+        question.classList.remove('rozinha');
       }
+
+
     }
   </script>
 </body>
