Atualização na primeira section

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,10 @@
           id="scr_63274df5369e77000acb159c">var s = document.createElement("script"); s.src = "https://scripts.converteai.net/33cfebf4-8e3e-42f5-952a-0961bd5a0ef7/players/63274df5369e77000acb159c/player.js", s.async = !0, document.head.appendChild(s);</script>
       </div>
 
-      <button>Quero aproveitar meu <br> cupom de 20% de desconto</button>
+      <a href="https://pay.hotmart.com/V9187282O?off=033xxw0y&checkoutMode=10&split=12&bid=1670966954026">
+        QUERO 1 ANO DE RESULTADO EM APENAS 2 MESES SE DIVERTINDO
+      </a>
+
       <p>Receba imediatamente o seu acesso após a confirmação do pagamento</p>
 
       <div class="icones">
@@ -181,7 +184,7 @@
     </div>
   </section>
 
-  <section class="fifthSection">
+  <!-- <section class="fifthSection">
     <div class="container">
       <div class="centro">
         <div class="words">
@@ -325,9 +328,9 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
-  <section class="descont1">
+  <!-- <section class="descont1">
     <div class="container">
       <div class="botao">
         <h3>Acesso anual por apenas 12x R$ 15,35</h3>
@@ -560,7 +563,7 @@
         <use xlink:href="dist/assets/svg/sprite.svg#patter1"></use>
       </svg>
     </div>
-  </section>
+  </section> -->
 
   <section class="seventSection">
     <div class="container">
@@ -603,20 +606,15 @@
 
     function carrosel1() {
       idy++;
-<<<<<<< HEAD
       if (idy > imgy.length - 12){
         idy =0;
-=======
-      if (idy > imgy.length - 5) {
-        idy = 0;
->>>>>>> 1fb35fb443ed159d4623e16b572c5bb582916434
       }
       imgsy.style.transform = `translateX(${-idy * 730}px)`;
 
     }
     setInterval(carrosel1, 3800);
   </script>
-  <section class="descont1">
+  <!-- <section class="descont1">
     <div class="container">
       <div class="botao">
         <h3>Acesso anual por apenas 12x R$ 15,35</h3>
@@ -674,7 +672,7 @@
         </div>
       </div>
     </div>
-  </footer>
+  </footer> -->
 
   <script>
     function changeStuff(event) {
