Responsivo terceira sessão

--- a/src/index.html
+++ b/src/index.html
@@ -115,7 +115,7 @@
       <img src="/dist/assets/images/23.png" alt="" class="metodologia">
       <div class="content">
         <div class="left">
-          <h1>1 ano de <span>resultado em 2 meses</span><br>se divertindo em casa</h1>
+          <h1>1 ano de <span>resultado em 2 meses</span> se divertindo em casa</h1>
           <img src="/dist/assets/images/24.png" alt="">
           <img class="none" src="/dist/assets/images/26.png" alt="">
 
